# wazuh

./: .gitignore  CHANGELOG.md
.github/actions/compile_and_test/: action.yml
.github/workflows/: integration-tests-rootcheck-tier-0.yml  vulnerability-scanner-tests.yml
api/: readme.md
api/api/controllers/: agent_controller.py  mitre_controller.py
api/api/models/: group_added_model.py
api/api/spec/: spec.yaml
api/test/integration/: conftest.py  test_agent_DELETE_endpoints.tavern.yaml  test_agent_GET_endpoints.tavern.yaml  test_agent_POST_endpoints.tavern.yaml  test_agent_PUT_endpoints.tavern.yaml  test_cluster_endpoints.tavern.yaml  test_mitre_endpoints.tavern.yaml  test_rbac_black_agent_endpoints.tavern.yaml  test_rbac_white_agent_endpoints.tavern.yaml  test_rbac_white_all_endpoints.tavern.yaml  test_rule_endpoints.tavern.yaml
architecture/: readme.md
framework/: readme.md  requirements.txt
framework/scripts/: agent_groups.py
framework/scripts/tests/: test_agent_groups.py
framework/wazuh/: agent.py
framework/wazuh/core/: agent.py  common.py  configuration.py  exception.py  rule.py  utils.py
framework/wazuh/tests/: test_agent.py  test_group.py
integrations/: pagerduty.py  readme.md  shuffle.py  slack.py  virustotal  virustotal.py
integrations/tests/: test_shuffle.py  test_slack.py  test_virustotal.py
ruleset/rules/: 0490-virustotal_rules.xml
src/: Makefile
src/analysisd/: analysisd.c
src/ci/: build_tools.py
src/client-agent/: receiver.c
src/config/: config.c  config.h  integrator-config.c  integrator-config.h  localfile-config.c  localfile-config.h  syscheck-config.c  syscheck-config.h
src/data_provider/src/: sharedDefs.h  sysInfoLinux.cpp  sysInfoMac.cpp  sysInfoWin.cpp
src/engine/: CMakeLists.txt
src/engine/benchmark/: CMakeLists.txt
src/engine/benchmark/json/: CMakeLists.txt  json_bench.cpp  json_examples.hpp
src/engine/test/: CMakeLists.txt
src/headers/: mq_op.h  shared.h
src/init/: inst-functions.sh
src/logcollector/: config.c  logcollector.c  logcollector.h
src/os_integrator/: integrator.c
src/remoted/: manager.c  secure.c
src/shared_modules/: CMakeLists.txt
src/shared_modules/content_manager/: CMakeLists.txt
src/shared_modules/content_manager/src/components/: updaterContext.hpp
src/shared_modules/content_manager/tests/component/: APIDownloader_test.cpp  APIDownloader_test.hpp
src/shared_modules/indexer_connector/: CMakeLists.txt
src/shared_modules/utils/: filesystemHelper.h
src/shared_modules/utils/tests/: stringHelper_test.cpp
src/syscheckd/src/: create_db.c  fim_diff_changes.c  syscheck.c
src/unit_tests/os_integrator/: test_integrator.c
src/unit_tests/remoted/: CMakeLists.txt
src/unit_tests/syscheckd/: test_create_db.c
src/unit_tests/wazuh_db/: CMakeLists.txt  test_wazuh_db_state.c  test_wdb.c  test_wdb_agents.c  test_wdb_delta_event.c  test_wdb_fim.c  test_wdb_global.c  test_wdb_metadata.c  (+6 more)
src/wazuh_db/: schema_agents.sql  wdb.c  wdb.h  wdb_delta_event.c  wdb_fim.c  wdb_global.c  wdb_parser.c  wdb_syscollector.c  wdb_upgrade.c
src/wazuh_modules/syscollector/tests/sysCollectorFlatbuffers/: CMakeLists.txt
src/win32/: win_utils.c
tests/integration/: conftest.py
wodles/: readme.md
wodles/aws/: aws_s3.py  aws_tools.py  wazuh_integration.py
(+116 files in other folders)
